<resources>
    <string name="app_name">OneOne</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="network_not_awesome">网络异常</string>
    <string name="empty_str"></string>
    <string name="commit_text">提交</string>
    <string name="no_name_text">用户</string>
    <string name="im_bottom_see_user_text">查看资料</string>
    <string name="im_bottom_report_text">举报</string>
    <string name="im_bottom_delete_contact_text">删除会话</string>
    <string name="im_send_gift_front_word">你送了</string>
    <string name="im_receive_gift_front_word">送了你</string>
    <string name="pic_limit_text_1">最多上传</string>
    <string name="pic_limit_text_2">张图片</string>
    <string name="str_common_no_data_text_2">数据</string>
    <string name="str_common_no_data_text">还没有</string>
    <string name="str_common_no_data_text_3">暂无互动消息</string>
    <string name="str_common_reload_btn_text">重新加载</string>
    <string name="str_common_net_err_desc">没有网络的世界\nOneOne没法生存</string>
    <string name="str_common_net_err_solution_text">解决方法</string>
    <string name="str_empty_my_follower_btn">现在去探索一下</string>
    <string name="str_empty_follow_me_btn">发点动态让别人关注你吧</string>
    <string name="str_empty_my_like_btn">去OneOne里挑一看看</string>
    <string name="str_empty_like_eachother_btn">发点动态让别人关注你吧</string>
    <string name="str_empty_like_me_btn">去OneOne里挑一看看</string>
    <string name="str_empty_my_follower">漫漫人海，\n还没找到想关注的Single...</string>
    <string name="str_empty_follow_me">暂时还是小透明\n⁄(⁄ ⁄•⁄ω⁄•⁄ ⁄)⁄</string>
    <string name="str_empty_my_like">还没遇上喜欢的人哟</string>
    <string name="str_empty_like_eachother">暂时还是小透明\n⁄(⁄ ⁄•⁄ω⁄•⁄ ⁄)⁄</string>
    <string name="str_empty_like_me">还没遇上喜欢的人哟</string>
    <string name="str_app_notice_phone_num_err">手机号格式有误</string>
    <string name="str_app_notice_not_install_wechat">您尚未安装微信</string>
    <string name="str_app_take_pic">拍照</string>
    <string name="str_app_choose_album">相册</string>
    <string name="str_app_title_right_save_text">保存</string>
    <string name="str_app_save_request_ok">保存成功</string>
    <string name="str_app_save_request_fail">保存失败</string>
    <string name="str_login_page_input_veri_code_0">输</string>
    <string name="str_login_page_input_veri_code_1">验</string>
    <string name="str_login_page_input_veri_code_2">证</string>
    <string name="str_login_page_input_veri_code_3">码</string>
    <string name="str_login_page_login_by_wx_tv">微信登录</string>
    <string name="str_login_page_login_by_phone_tv">手机号登录</string>
    <string name="str_login_page_agree_protocol_notice">继续操作即表示同意</string>
    <string name="str_login_page_input_phone_tv">输入手机号</string>
    <string name="str_set_single_flow_page_step_11_pic_story">这张照片有什么故事吗...</string>
    <string name="str_set_single_flow_page_max_count_tags_1">最多选择</string>
    <string name="str_set_single_flow_page_max_count_tags_2">个标签</string>
    <string name="str_set_single_flow_page_step_1_please_choose">请选择</string>
    <string name="str_set_single_flow_page_step_11_max_pic_upload_notice">最多上传6张</string>
    <string name="str_set_single_flow_page_step_2_input_nickname_notice">请填写昵称</string>
    <string name="str_set_single_flow_page_input_city_notice">请填写城市</string>
    <string name="str_set_single_flow_page_step_4_input_birthday_notice">请填写生日</string>
    <string name="str_set_single_flow_page_min_count_tags_1">至少选择</string>
    <string name="str_set_single_flow_page_min_count_tags_2">个标签</string>
    <string name="str_set_single_flow_page_min_count_tags">至少选择%1$s个标签</string>
    <string name="str_set_single_flow_page_custom_tag">＋自定义标签</string>
    <string name="str_set_single_flow_page_custom_tag_not_null_notice">标签文字不能为空</string>
    <string name="str_set_single_flow_page_custom_tag_not_null_notice_space">标签文字不能包含空格</string>
    <string name="str_set_single_flow_page_photo_pic_choosed_notice">Nice! 不满意也可以换:)</string>
    <string name="str_set_single_flow_page_live_pic_choosed_notice_2">不错！再来几张吧</string>
    <string name="str_set_single_flow_page_live_pic_choosed_notice_1">选几张照片</string>
    <string name="str_set_single_flow_page_createing_single_tv">单身资料生成中</string>
    <string name="str_set_single_flow_page_i_am_tv">我是</string>
    <string name="str_set_single_flow_page_girl_tv">少女</string>
    <string name="str_set_single_flow_page_little_sister">小姐姐</string>
    <string name="str_set_single_flow_page_sister">姐姐</string>
    <string name="str_set_single_flow_page_fresh_meat">鲜肉</string>
    <string name="str_set_single_flow_page_little_brother">小哥哥</string>
    <string name="str_set_single_flow_page_brother">大叔</string>
    <string name="str_set_single_flow_page_confirm">确认</string>
    <string name="str_set_single_flow_page_confirm_cannot_modify">确认后不可修改</string>
    <string name="str_set_single_flow_page_want_to_be_called">我希望被大家叫做</string>
    <string name="str_set_single_flow_page_nickname">昵称</string>
    <string name="str_set_single_flow_page_usually_live_in">我现在常居住在</string>
    <string name="str_set_single_flow_page_city">城市</string>
    <string name="str_set_single_flow_page_my_birthday">我的出生日期是</string>
    <string name="str_set_single_flow_page_year_month_day">年/月/日</string>
    <string name="str_set_single_flow_page_date_confirm">确定</string>
    <string name="str_set_single_flow_page_date_cancel">取消</string>
    <string name="str_set_single_flow_page_tip_range_1_to_3">可选择1～3个标签</string>
    <string name="str_set_single_flow_page_tip_range_1_to_10">可选择1～10个标签</string>
    <string name="str_set_single_flow_page_tip_range_3_to_10">可选择3～10个标签</string>
    <string name="str_set_single_flow_page_work_experence">你曾经和现在都做过\n哪些工作？</string>
    <string name="str_set_single_flow_page_skill_except_occupation">除了现在的职业， \n你还有什么能养家糊口的技能？</string>
    <string name="str_set_single_flow_page_your_personality">通过以下哪些特征可以区 \n别你和其他人？</string>
    <string name="str_set_single_flow_page_sepcial_experience">选出那些吓呆小伙伴的特殊经历</string>
    <string name="str_set_single_flow_page_your_creed">严肃选出你的人生信条</string>
    <string name="str_set_single_flow_page_special_hobby">要满足你的哪些偏好才能 \n和你愉快地交往？</string>
    <string name="str_set_single_flow_page_next_step">下一步</string>
    <string name="str_set_single_flow_page_next_this">就这些</string>
    <string name="str_set_single_flow_page_jump_to_next">跳过</string>
    <string name="str_set_single_flow_page_input_max_count_10">输入（不超过10个字）</string>
    <string name="str_set_single_flow_page_choose_pic_tv_1">Hey！为了让形象更生动，还需要 \n你的几张高质量照片；）</string>
    <string name="str_set_single_flow_page_upload_user_mainly_page_photo">上传个人主页照片</string>
    <string name="str_set_single_flow_page_choose_user_photo_pic">选1张半身照／大头照</string>
    <string name="str_set_single_flow_page_choose_user_live_pic">上传生活照片</string>
    <string name="str_set_single_flow_page_choose_user_live_pic_case">例如：你的小时候；你在旅行中的照片；日常会做运动的你；撸猫遛狗中的你；你最喜欢的一幅画 等等……</string>
    <string name="str_set_single_flow_page_choose_several_pic">选几张照片</string>
    <string name="str_set_single_flow_page_preview">预览效果</string>
    <string name="str_set_single_flow_page_back_to_modify">返回编辑</string>
    <string name="str_set_single_flow_page_preview_title">为了更好地展示你鲜活有趣的灵魂，OneOne已根据你的个性标签，为你设计了独特的个人故事。</string>
    <string name="str_set_single_flow_page_invite_matcher_top_text_1">邀请好友写Matcher印象\n认识真实的你</string>
    <string name="str_set_single_flow_page_invite_matcher_top_text_2">Matcher印象，是朋友对你的评价，带着这个评价，他人可以迅速了解你生活中的模样。你也可以通过他人的Matcher印象，了解他是否是你所期盼的样子</string>
    <string name="str_set_single_flow_page_invite_matcher_qa_text">你的Matcher将会做什么？</string>
    <string name="str_set_single_flow_page_invite_matcher_invite_wx_friend_text">点击邀请链接发送给微信好友</string>
    <string name="str_set_single_flow_page_invite_matcher_send_link_text">点击邀请链接发送给微信好友</string>
    <string name="str_set_single_flow_page_invite_matcher_open_oneone_btn_text">开启OneOne</string>
    <string name="str_set_single_flow_page_invite_matcher_what_is_mather_text">Matcher会 · 为你写Matcher印象，带OneOne认识生活中的你 · 邀请身边的单身，提供给你更多认识同一圈层单身的机会</string>
    <string name="str_wx_bind_phone_page_enter_oneone">进入OneOne</string>
    <string name="str_wx_bind_phone_page_wrong_phone_num">手机号格式有误</string>
    <string name="str_wx_bind_phone_page_send_veri_code_after_second">秒后可重发验证码</string>
    <string name="str_wx_bind_phone_page_send_veri_code_again">重新发送验证码</string>
    <string name="str_wx_bind_phone_page_bind_phone_title">绑定手机号</string>
    <string name="str_wx_bind_phone_page_input_phone_hint">输入手机号码</string>
    <string name="str_wx_bind_phone_page_continue">继续</string>
    <string name="str_wx_bind_phone_page_input_vericode">输入验证码</string>
    <string name="str_wx_bind_phone_page_send_message_notice">短信已发送到 +86</string>
    <string name="str_wx_bind_phone_page_change_phone_num">更改手机号</string>
    <string name="str_wx_entry_auth_failed">授权失败，请重试</string>
    <string name="str_welcome_page_notice_0">欢迎来到OneOne</string>
    <string name="str_welcome_page_notice_1">这是个只有单身和他们的朋友才可以加入的社会。\n\n有趣的单身们在这里一边享受单身时光, 一边探索更多同类！所有人也都能作为Matcher给好友牵线，助TA开启美好关系并收获感谢。\n\nLet’s Celebrate Singlehood!</string>
    <string name="str_welcome_page_choose_role_tv_1">请选择你的身份</string>
    <string name="str_welcome_page_choose_role_tv_2">随后可在任意时间激活第二身份</string>
    <string name="str_welcome_page_single_explain_1">Single=单身</string>
    <string name="str_welcome_page_single_explain_2">是OneOne里的第二大物种。Ta们都是快乐的单身</string>
    <string name="str_welcome_page_single_suggest_tv">你会遇到这些有趣的Single</string>
    <string name="str_welcome_page_confirm_single_role">以 Single 身份继续</string>
    <string name="str_welcome_page_confirm_matcher_role">以 Matcher 身份继续</string>
    <string name="str_welcome_page_matcher_single_count_text">位单身</string>
    <string name="str_wx_auth_page_wx_auth">微信授权</string>
    <string name="str_wx_auth_page_wx_auth1">重新绑定微信</string>
    <string name="str_wx_auth_page_wx_auth_oneone">去微信授权OneOne</string>
    <string name="str_wx_auth_page_wx_auth_explain">微信授权后，你就能快速地在OneOne上找 \n到微信好友，和Ta一起解锁更多玩法哟～</string>
    <string name="str_welcome_page_matcher_explain_1">Match-er＝媒婆</string>
    <string name="str_welcome_page_matcher_explain_2">拥有连接缘分的超能力。作为OneOne里的第一大物种，不管是否单身，都可以帮自己的朋友促成新的缘分</string>
    <string name="str_welcome_page_matcher_suggest_tv">你会和这些Matcher一起连接OneOne们</string>
    <string name="str_tab_mine">我</string>
    <string name="str_tab_timeline">动态</string>
    <string name="str_tab_singles">Single团</string>
    <string name="str_tab_find">探索</string>
    <string name="str_tab_msg">消息</string>
    <string name="str_set_single_flow_page_invite_matcher_send_invite_text">发送邀请</string>
    <string name="str_wx_bind_phone_page_send">已发送</string>
    <string name="title_city_select">选择地区</string>
    <string name="title_occupation_select">选择行业</string>
    <string name="str_wx_bind_phone_tip">该微信已注册过账号，请绑定其他微信或\n登陆原有账号</string>
    <string name="str_about_oneone_protocol_text">《OneOne使用协议》</string>
    <string name="str_activity_singles_invite_title">组建你的Single团 \n单身人类等你来拯救</string>
    <string name="str_activity_singles_invite_sub_title">你可以在OneOne上：</string>
    <string name="str_activity_singles_invite_content">1.为认识的Single写Matcher印象，带\n Oneone认识真实的TA \n2.邀请身边的单身，让TA们在OneOne上相\n逢相知</string>
    <string name="str_activity_singles_invite_tip">点击邀请链接发送给微信好友</string>
    <string name="str_activity_singles_invite_tip1">每邀请成功一位单身你都将获得100狗粮奖励~</string>
    <string name="timeline_report_reason_title">请选择举报原因</string>
    <string name="timeline_report_reason_ad">广告</string>
    <string name="timeline_report_reason_eroticism">色情</string>
    <string name="timeline_report_reason_swindle">诈骗</string>
    <string name="timeline_report_reason_llegality">违法</string>
    <string name="timeline_report_reason_other">其他</string>
    <string name="str_activity_singles_bind_wechat">绑定微信后即可邀请Single</string>
    <string name="str_wx_auth_page_wx_auth_now">现在绑定</string>
</resources>