<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_singles_invite_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_toolbar"
        android:background="@color/color_796CF0"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_dp_26"
        android:paddingEnd="@dimen/dimen_dp_26"
        android:paddingStart="@dimen/dimen_dp_26">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/str_activity_singles_invite_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_sp_22"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_dp_16"
            android:text="@string/str_activity_singles_invite_sub_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_sp_14" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_dp_16"
            android:lineSpacingExtra="5dp"
            android:text="@string/str_activity_singles_invite_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_singles_invite_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_singles_invite_header"
        android:layout_marginTop="@dimen/dimen_dp_30"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/str_activity_singles_invite_tip"
            android:textColor="@color/color_3E4F6C"
            android:textSize="@dimen/dimen_sp_16"
            android:textStyle="bold" />

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_dp_5"
            android:gravity="center_horizontal"
            android:text="@string/str_activity_singles_invite_tip1"
            android:textColor="@color/color_3E4F6C"
            android:textSize="@dimen/dimen_sp_13" />

        <com.oneone.support.share.ShareBox
            android:id="@+id/share_invite_single"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:sb_icon="@drawable/selector_singles_invite_friend_icon"
            app:sb_text="@string/str_set_single_flow_page_invite_matcher_send_invite_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_singles_invite_bind_wechat_ll"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen_dp_40"
        android:layout_below="@+id/activity_singles_invite_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/str_activity_singles_bind_wechat"
            android:textColor="@color/color_3E4F6C"
            android:textSize="@dimen/dimen_sp_16"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/activity_singles_invite_bind_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/dimen_dp_58"
            android:layout_marginStart="@dimen/dimen_dp_58"
            android:layout_marginTop="58dp"
            android:background="@drawable/shap_green_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_dp_15"
                android:src="@drawable/ic_bind_wechat" />

            <TextView
                android:id="@+id/tv_wx_auth_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/str_wx_auth_page_wx_auth_now"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/bg_singles_invite_banner" />
</RelativeLayout>