<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="180.5dp"
    android:orientation="vertical"
    android:background="@drawable/shape_white_radius_5dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120.5dp"
        android:orientation="vertical"
        android:background="@color/color_F9F9FA"
        >
        <TextView
            android:id="@+id/see_user_tv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/color_3E4F6C"
            android:text="@string/im_bottom_see_user_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:background="@color/gray_line"
            />
        <TextView
            android:id="@+id/report_tv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/color_3E4F6C"
            android:text="@string/im_bottom_report_text"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/delete_contact_tv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="18dp"
        android:textColor="@color/red"
        android:text="@string/im_bottom_delete_contact_text"
        />
</LinearLayout>